--- a/pages/goods-pages/non-standard.html
+++ b/pages/goods-pages/non-standard.html
@@ -44,7 +44,7 @@
         }
 
         .main-footer {
-            position: static;
+            position: absolute;
             bottom: 0;
             right: 0;
             width: 100%;
